--- a/templates/rcode_helper/explanation_result.html
+++ b/templates/rcode_helper/explanation_result.html
@@ -77,8 +77,8 @@
 <script src="https://cdn.jsdelivr.net/npm/monaco-editor@latest/min/vs/loader.js"></script>
 
 <!-- Advanced Code Editor -->
-<link rel="stylesheet" href="{% static 'css/advanced-code-editor.css' %}">
-<script src="{% static 'js/advanced-code-editor.js' %}"></script>
+<link rel="stylesheet" href="{% static 'css/components/advanced-code-editor.css' %}">
+<script src="{% static 'js/modules/advanced-code-editor.js' %}"></script>
 
 <style>
 .enhanced-code-display {
